# web-scraper

./: .gitignore  .vercelignore  CNAME  Makefile  main.py  pyproject.toml  requirements.txt  settings.py  vercel.json
.devcontainer/: devcontainer.json
.github/workflows/: build
backend/dependencies/: base.py
backend/errors/: env.py  project_io.py
backend/services/: Email.py  Parser.py  ProjectIo.py
backend/services/aws/: s3.py
backend/services/instagram/: instagram_service.py
backend/services/openai/: Prompter.py
objects/api/: response.py
objects/models/: aws_service.py
objects/requests/: aws_service.py  send_briefing_email.py  stock.py
python/: Email.py  Parser.py  ProjectIo.py  Prompter.py  main.py
python/facebook/: test_create_insta_post.py
python/in/: test_db.json
python/test/: response.md  test_openai.py  test_send_email.py
stockly/: Parser.py  Prompter.py  main.py
stockly/backend/: terms_and_conditions.py
stockly/backend/dependencies/: base.py
stockly/backend/errors/: base.py  env.py  external.py  project_io.py
stockly/backend/services/: Email.py  Parser.py  ProjectIo.py  send_briefing_email_service.py
stockly/backend/services/aws/: s3.py
stockly/errors/: base.py
stockly/in/: test_db.json
stockly/objects/api/: response.py
stockly/objects/models/: aws_service.py
stockly/objects/requests/: aws_service.py  generate_image.py  send_briefing_email.py  stock.py
stockly/services/: ProjectIo.py
stockly/services/instagram/: instagram_service.py
stockly/test/: test_openai.py  test_send_email.py
(+2 files in other folders)
